fix some alignment issues

--- a/app/styles/app/_application.scss
+++ b/app/styles/app/_application.scss
@@ -3,7 +3,7 @@
   height: 25px;
 
   position: fixed;
-  top: 4px;
+  top: 10px;
   left: 10px;
 }
 
